Expand portfolio with new project categories and items
Added new sections for PhaserJS, VR & AR (ThreeJS), 3D Animation (ThreeJS), Unity Games (Itch.io), and Unreal Engine (GitHub) to the portfolio. Included multiple new project entries with images, descriptions, and links to showcase a broader range of work.

--- a/portafolio.html
+++ b/portafolio.html
@@ -72,7 +72,7 @@
 		<br>
 		<h2 style="color:white;">
 			<i class="arrow_carrot-left" style="color:#00FFFF;"></i>
-				VideoGames
+				VideoGames - PhaserJS
 			<i class="arrow_carrot-right" style="color:#00FFFF;"></i>
 		</h2>
 		<div class="row gallery-gird">
@@ -106,6 +106,26 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item fresco" href="https://sgutz96.github.io/Job_WebfFenix/" data-fresco-group="projects">
+					<img src="img/Games/1.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+					<div class="gi-text">
+						<h4>Web Fenix</h4>
+						<p>Web/PhaserJS</p>
+					</div>
+				</a>
+			</div>
+		</div>
+
+		<br>
+
+		<h2 style="color:white;">
+			<i class="arrow_carrot-left" style="color:#00FFFF;"></i>
+				VR & AR - ThreeJS
+			<i class="arrow_carrot-right" style="color:#00FFFF;"></i>
+		</h2>
+		<div class="row gallery-gird">
 			
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item fresco" href="https://sgutz96.github.io/USB_VRSpaceWeb/" data-fresco-group="projects">
@@ -126,6 +146,26 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item fresco" href="https://sgutz96.github.io/Portafolio_AR_CreatugGym/" data-fresco-group="projects">
+					<img src="img/Games/1.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+					<div class="gi-text">
+						<h4>Creatug Gym AR</h4>
+						<p>Web/ThreeJS/AR</p>
+					</div>
+				</a>
+			</div>
+		</div>
+
+		<br>
+
+		<h2 style="color:white;">
+			<i class="arrow_carrot-left" style="color:#00FFFF;"></i>
+				3D Animation - ThreeJS
+			<i class="arrow_carrot-right" style="color:#00FFFF;"></i>
+		</h2>
+		<div class="row gallery-gird">
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item fresco" href="https://sgutz96.github.io/USB_CiudadProcedural/" data-fresco-group="projects">
@@ -156,16 +196,66 @@
 					</div>
 				</a>
 			</div>
+		</div>
+
+		<br>
+
+		<h2 style="color:white;">
+			<i class="arrow_carrot-left" style="color:#00FFFF;"></i>
+				Unity Games (Itch.io)
+			<i class="arrow_carrot-right" style="color:#00FFFF;"></i>
+		</h2>
+		<div class="row gallery-gird">
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
-				<a class="gallery-item fresco" href="https://sgutz96.github.io/Portafolio_AR_CreatugGym/" data-fresco-group="projects">
-					<img src="img/Games/1.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+				<a class="gallery-item fresco" href="https://foxscripts27.itch.io/ghibli-mundo" data-fresco-group="projects">
+					<img src="img/Games/4.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
 					<div class="gi-text">
-						<h4>Creatug Gym AR</h4>
-						<p>Web/ThreeJS/AR</p>
+						<h4>Ghibli Mundo</h4>
+						<p>Unity</p>
 					</div>
 				</a>
 			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item fresco" href="https://foxscripts27.itch.io/hanss-adventures" data-fresco-group="projects">
+					<img src="img/Games/13.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+					<div class="gi-text">
+						<h4>Hanss Adventures</h4>
+						<p>Unity</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item fresco" href="https://foxscripts27.itch.io/tanks" data-fresco-group="projects">
+					<img src="img/Games/6.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+					<div class="gi-text">
+						<h4>Tanks</h4>
+						<p>Unity</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<div class="gallery-item" style="opacity: 0.7;">
+					<img src="img/Games/12.jpg" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+					<div class="gi-text">
+						<h4>Correcaminos</h4>
+						<p>Unity - En Proceso</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<br>
+
+		<h2 style="color:white;">
+			<i class="arrow_carrot-left" style="color:#00FFFF;"></i>
+				Unreal Engine (GitHub)
+			<i class="arrow_carrot-right" style="color:#00FFFF;"></i>
+		</h2>
+		<div class="row gallery-gird">
 
 			<div class="col-lg-4 col-xl-3 col-sm-6">
 				<a class="gallery-item fresco" href="https://github.com/sgutz96/Unir_topDown" data-fresco-group="projects">
@@ -232,6 +322,16 @@
 					<img src="img/web/1.png" alt="" style="width: 100%; height: 200px; object-fit: cover;">
 					<div class="gi-text">
 						<h4>Udemy Blog</h4>
+						<p>Prueba Técnica</p>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-lg-4 col-xl-3 col-sm-6">
+				<a class="gallery-item fresco" href="https://sgutz96.github.io/Job_TAIIRONA/" data-fresco-group="projects">
+					<img src="img/web/2.png" alt="" style="width: 100%; height: 200px; object-fit: cover;">
+					<div class="gi-text">
+						<h4>Job TAIIRONA</h4>
 						<p>Prueba Técnica</p>
 					</div>
 				</a>
